--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>Document</title>
 </head>
 <body>
+    <!-- <p class="text"></p>
+    <button class="btn">click</button>
+    <ul class="wrapper-products">
+
+    </ul>
+    <button class="filter-btn">Показати дорожчі за 500</button> -->
+
+    <!-- <div class="users"> </div>
+    <button class="users-btn">Users</button> -->
+
+    <div class="products"></div>
+    <button class="products-btn">Фрукти</button>
     <script src="./js.js"></script>
 </body>
 </html>
