--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
     <!-- <div class="users"> </div>
     <button class="users-btn">Users</button> -->
 
-    <div class="products"></div>
-    <button class="products-btn">Фрукти</button>
+    <!-- <div class="products"></div>
+    <button class="products-btn">Фрукти</button> -->
+    <!-- <div class="new-products"></div>
+    <button class="new-products-btn">Товари</button> -->
+    <div class="products-title"></div>
+    <button class="products-title-btn">Назва товару</button>
     <script src="./js.js"></script>
 </body>
 </html>
